# linux-3-finger-drag

./: Cargo.toml
src/: main.rs
src/init/: config.rs  libinput_init.rs
src/runtime/: virtual_trackpad.rs
